@@ -5,6 +5,8 @@ use base qw/DBIx::Class::Schema/;
 
 no warnings qw/qw/;
 
+__PACKAGE__->mk_group_accessors(simple => 'custom_attr');
+
 __PACKAGE__->load_classes(qw/
   Artist
   SequenceTest
